Force dropdown text onto one line. Fixes issue where text was overflowing onto second line if dropdown box extended beyond width of browser viewport

--- a/tz_planner.css
+++ b/tz_planner.css
@@ -30,6 +30,7 @@ h1 {
     border: 2px solid #fff;
     border-radius: 10px;
     padding: 5px 20px;
+    white-space: nowrap;
     }
     .swapper button { color: #ccc; }
 .dropdown:hover button,
